test/errors/types1.input.asm
* = $801

    lda #"strval"  ; shouldn't compile
